layout issues fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,7 +106,7 @@ p {
 
 /***************************************** Report Page ****************************************/
 .reporttable {
-  width: 50%;
+  width: 40%;
   float: left;
 }
 .chart {
